--- a/Superheroes.ipynb
+++ b/Superheroes.ipynb
@@ -78,11 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "223caabc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pymysql\n",
+    "pymysql.install_as_MySQLdb()\n",
+    "import pandas as pd\n",
+    "\n",
+    "#sklearn\n",
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,11 +101,532 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4e5a8fc4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hero_info = pd.read_csv('Data/superhero_info.csv')\n",
+    "hero_powers = pd.read_csv('Data/superhero_powers.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "69d0b2c8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hero|Publisher</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Alignment</th>\n",
+       "      <th>Hair color</th>\n",
+       "      <th>Eye color</th>\n",
+       "      <th>Skin color</th>\n",
+       "      <th>Measurements</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A-Bomb|Marvel Comics</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>good</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>{'Height': '203.0 cm', 'Weight': '441.0 kg'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Abe Sapien|Dark Horse Comics</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Icthyo Sapien</td>\n",
+       "      <td>good</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>{'Height': '191.0 cm', 'Weight': '65.0 kg'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abin Sur|DC Comics</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Ungaran</td>\n",
+       "      <td>good</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>red</td>\n",
+       "      <td>{'Height': '185.0 cm', 'Weight': '90.0 kg'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abomination|Marvel Comics</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Human / Radiation</td>\n",
+       "      <td>bad</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>green</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>{'Height': '203.0 cm', 'Weight': '441.0 kg'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Absorbing Man|Marvel Comics</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>bad</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>{'Height': '193.0 cm', 'Weight': '122.0 kg'}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Hero|Publisher Gender               Race Alignment  \\\n",
+       "0          A-Bomb|Marvel Comics   Male              Human      good   \n",
+       "1  Abe Sapien|Dark Horse Comics   Male      Icthyo Sapien      good   \n",
+       "2            Abin Sur|DC Comics   Male            Ungaran      good   \n",
+       "3     Abomination|Marvel Comics   Male  Human / Radiation       bad   \n",
+       "4   Absorbing Man|Marvel Comics   Male              Human       bad   \n",
+       "\n",
+       "  Hair color Eye color Skin color  \\\n",
+       "0    No Hair    yellow    Unknown   \n",
+       "1    No Hair      blue       blue   \n",
+       "2    No Hair      blue        red   \n",
+       "3    No Hair     green    Unknown   \n",
+       "4    No Hair      blue    Unknown   \n",
+       "\n",
+       "                                   Measurements  \n",
+       "0  {'Height': '203.0 cm', 'Weight': '441.0 kg'}  \n",
+       "1   {'Height': '191.0 cm', 'Weight': '65.0 kg'}  \n",
+       "2   {'Height': '185.0 cm', 'Weight': '90.0 kg'}  \n",
+       "3  {'Height': '203.0 cm', 'Weight': '441.0 kg'}  \n",
+       "4  {'Height': '193.0 cm', 'Weight': '122.0 kg'}  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load hero_info dataset\n",
+    "hero_info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d39eae19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hero|Publisher    object\n",
+       "Gender            object\n",
+       "Race              object\n",
+       "Alignment         object\n",
+       "Hair color        object\n",
+       "Eye color         object\n",
+       "Skin color        object\n",
+       "Measurements      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hero_info.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b863d6a8",
+   "metadata": {},
+   "source": [
+    "## hero_info\n",
+    "\n",
+    "---\n",
+    "In the **hero_info** dataset the column **Hero|Publisher** needs to separated. And the **Measurements** column needs to be separated into ***'Height'* & *'Weight'***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1770f2e0",
+   "metadata": {},
+   "source": [
+    "### Data cleaning hero_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20be7d1b",
+   "metadata": {},
+   "source": [
+    "### Check for duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fe2e1285",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for duplicate values\n",
+    "hero_info.duplicated().sum()\n",
+    "\n",
+    "# There is no duplicated data in hero_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d322fc2",
+   "metadata": {},
+   "source": [
+    "### Check for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "477691ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hero|Publisher    0\n",
+       "Gender            0\n",
+       "Race              0\n",
+       "Alignment         0\n",
+       "Hair color        0\n",
+       "Eye color         0\n",
+       "Skin color        0\n",
+       "Measurements      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing values\n",
+    "hero_info.isna().sum()\n",
+    "\n",
+    "# There is no missing data in hero_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "246a012d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c3828af",
+   "metadata": {},
+   "source": [
+    "## hero_powers\n",
+    "\n",
+    "---\n",
+    "**hero_powers** dataset has columns that need to be changed:\n",
+    "    - **hero_names** needs to be changed to **Hero** & combined with **Hero|Publisher** once separated.\n",
+    "    - **Powers** needs to be ***one-hot-encoded***."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4e1e046e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hero_names</th>\n",
+       "      <th>Powers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3-D Man</td>\n",
+       "      <td>Agility,Super Strength,Stamina,Super Speed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A-Bomb</td>\n",
+       "      <td>Accelerated Healing,Durability,Longevity,Super...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abe Sapien</td>\n",
+       "      <td>Agility,Accelerated Healing,Cold Resistance,Du...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abin Sur</td>\n",
+       "      <td>Lantern Power Ring</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abomination</td>\n",
+       "      <td>Accelerated Healing,Intelligence,Super Strengt...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    hero_names                                             Powers\n",
+       "0      3-D Man         Agility,Super Strength,Stamina,Super Speed\n",
+       "1       A-Bomb  Accelerated Healing,Durability,Longevity,Super...\n",
+       "2   Abe Sapien  Agility,Accelerated Healing,Cold Resistance,Du...\n",
+       "3     Abin Sur                                 Lantern Power Ring\n",
+       "4  Abomination  Accelerated Healing,Intelligence,Super Strengt..."
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hero_powers.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2dde00b",
+   "metadata": {},
+   "source": [
+    "### Check for duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c3a139d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for duplicates\n",
+    "hero_powers.duplicated().sum()\n",
+    "\n",
+    "# There is no duplicated data in hero_powers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c061d68",
+   "metadata": {},
+   "source": [
+    "### Check for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "57116128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hero_names    0\n",
+       "Powers        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing data\n",
+    "hero_powers.isna().sum()\n",
+    "\n",
+    "# There is no missing data in hero_powers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4e4f6b5",
+   "metadata": {},
+   "source": [
+    "### Change column name hero_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d11dd8b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change column name 'hero_names' to 'Hero'\n",
+    "hero_powers = hero_powers.rename(columns={'hero_names': 'Hero'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "16254e77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hero</th>\n",
+       "      <th>Powers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3-D Man</td>\n",
+       "      <td>Agility,Super Strength,Stamina,Super Speed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A-Bomb</td>\n",
+       "      <td>Accelerated Healing,Durability,Longevity,Super...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abe Sapien</td>\n",
+       "      <td>Agility,Accelerated Healing,Cold Resistance,Du...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abin Sur</td>\n",
+       "      <td>Lantern Power Ring</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abomination</td>\n",
+       "      <td>Accelerated Healing,Intelligence,Super Strengt...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Hero                                             Powers\n",
+       "0      3-D Man         Agility,Super Strength,Stamina,Super Speed\n",
+       "1       A-Bomb  Accelerated Healing,Durability,Longevity,Super...\n",
+       "2   Abe Sapien  Agility,Accelerated Healing,Cold Resistance,Du...\n",
+       "3     Abin Sur                                 Lantern Power Ring\n",
+       "4  Abomination  Accelerated Healing,Intelligence,Super Strengt..."
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hero_powers.head()"
+   ]
   }
  ],
  "metadata": {
@@ -135,7 +663,7 @@
     "width": "307.995px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
