--- a/Superheroes.ipynb
+++ b/Superheroes.ipynb
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "69d0b2c8",
+   "id": "66c91f03",
    "metadata": {
     "scrolled": true
    },
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d39eae19",
+   "id": "70ef0766",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b863d6a8",
+   "id": "a873c40f",
    "metadata": {},
    "source": [
     "## hero_info\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1770f2e0",
+   "id": "e5557bb7",
    "metadata": {},
    "source": [
     "### Data cleaning hero_info"
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20be7d1b",
+   "id": "acc308a3",
    "metadata": {},
    "source": [
     "### Check for duplicates"
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fe2e1285",
+   "id": "70aa648c",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d322fc2",
+   "id": "f0d02087",
    "metadata": {},
    "source": [
     "### Check for missing values"
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "477691ce",
+   "id": "08d645db",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "246a012d",
+   "id": "f880f74a",
    "metadata": {},
    "source": [
     "---"
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3828af",
+   "id": "0fa29e22",
    "metadata": {},
    "source": [
     "## hero_powers\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4e1e046e",
+   "id": "23357e86",
    "metadata": {
     "scrolled": true
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2dde00b",
+   "id": "6be3c8f6",
    "metadata": {},
    "source": [
     "### Check for duplicates"
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c3a139d5",
+   "id": "e6b3396f",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c061d68",
+   "id": "86552117",
    "metadata": {},
    "source": [
     "### Check for missing values"
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "57116128",
+   "id": "d55d2a80",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e4f6b5",
+   "id": "88068d99",
    "metadata": {},
    "source": [
     "### Change column name hero_names"
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d11dd8b7",
+   "id": "3626ac87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,9 +551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "16254e77",
-   "metadata": {},
+   "execution_count": 49,
+   "id": "3d59aa5c",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -619,13 +621,58 @@
        "4  Abomination  Accelerated Healing,Intelligence,Super Strengt..."
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Sanity check that column is now 'Hero'\n",
     "hero_powers.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "684568cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "667"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check total number of powers\n",
+    "hero_powers['Powers'].value_counts().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd19d3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330562a6",
+   "metadata": {},
+   "source": [
+    "cols_to_make = hero_powers['Powers'].unique()\n",
+    "\n",
+    "for col in cols_to_make:\n",
+    "    hero_powers[col] = hero_powers['Powers'].str.contains(col)\n",
+    "hero_powers.head()\n",
+    "\n",
+    "(This gives a big error. So come back to it later...)"
    ]
   }
  ],
