--- a/Superheroes.ipynb
+++ b/Superheroes.ipynb
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6a046144",
+   "id": "87be00ae",
    "metadata": {
     "scrolled": true
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ca6887",
+   "id": "223e38d4",
    "metadata": {},
    "source": [
     "## Change Measurements values so they can be applied to json.loads"
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "33a823e1",
+   "id": "18f46024",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4765c7",
+   "id": "9401a004",
    "metadata": {},
    "source": [
     "# Concatenate hero_info"
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5f8f36e3",
+   "id": "9849aec4",
    "metadata": {},
    "outputs": [
     {
@@ -1116,8 +1116,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df2458d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hero_info = hero_info.apply(lambda cell: (cell.replace('')))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "92ce1624",
+   "id": "637732d2",
    "metadata": {},
    "source": [
     "# Additional Instructions:\n",
@@ -1421,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1f9d40e6",
+   "id": "05e29ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "acf0518c",
+   "id": "d40306d8",
    "metadata": {},
    "outputs": [
     {
@@ -2782,8 +2792,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "de624bf2",
-   "metadata": {},
+   "id": "c3089b60",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2813,7 +2825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786f877b",
+   "id": "4462f9bd",
    "metadata": {},
    "source": [
     "## Instructions:\n",
